fix chunks document, fix ai functions